--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -40,9 +40,10 @@ height:600px;
                         </div>
                     </div>
                     <!-- Single -->
-                    
+
                 </div>
-           
+            </div>
+        </div>
         <!-- End Hero -->
         <!--? Popular Items Start -->
 
