--- a/shop/templates/shop/product_details.html
+++ b/shop/templates/shop/product_details.html
@@ -148,7 +148,7 @@ text-align:center;
     position: absolute;
     top: 0;
     left: 0;
-    min-height: 600px;
+    height: auto;
 
 }
 .column1 {
